Closed
Bug 272130
Opened 21 years ago
Closed 21 years ago
TBTrunk crash in [@ nsMsgContentPolicy::ShouldLoad]
Categories
(MailNews Core :: Backend, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: Bienvenu, Assigned: Bienvenu)
Details
(Keywords: crash, fixed-aviary1.0, topcrash)
Crash Data
Attachments
(2 files)
|
713 bytes,
patch
|
mscott
:
superreview+
|
Details | Diff | Splinter Review |
|
802 bytes,
patch
|
timeless
:
review-
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
I accidentally deleted an rss feed, moved it out of the trash, and then read a
message in the feed. I crashed in nsMsgContentPolicy::ShouldLoad - fix upcoming.
| Assignee | ||
Comment 1•21 years ago
|
||
the folder was coming back null - GetFolder should probably return an error if
there's no folder, but this fix is a lot safer for right now.
| Assignee | ||
Updated•21 years ago
|
Attachment #167265 -
Flags: superreview?(mscott)
| Assignee | ||
Updated•21 years ago
|
Keywords: fixed-aviary1.0
Updated•21 years ago
|
Attachment #167265 -
Flags: superreview?(mscott) → superreview+
| Assignee | ||
Updated•21 years ago
|
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 2•21 years ago
|
||
Reopening to see that we get this patched up on the Trunk. It has become a
major topcrash with recent ThunderbirdTrunk builds.
Here is a recent incident:
Incident ID: 3532525
Stack Signature nsMsgContentPolicy::ShouldLoad 5f9a761c
Product ID ThunderbirdTrunk
Build ID 2005020506
Trigger Time 2005-02-06 13:07:36.0
Platform Win32
Operating System Windows NT 5.1 build 2600
Module THUNDE~1.EXE + (0044a4b2)
URL visited
User Comments trying to open a saved draft email which was created while offline
Since Last Crash 8589 sec
Total Uptime 8589 sec
Trigger Reason Access violation
Source File, Line No.
e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgContentPolicy.cpp,
line 271
Stack Trace
nsMsgContentPolicy::ShouldLoad
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgContentPolicy.cpp,
line 271]
nsContentPolicy::CheckPolicy
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/content/base/src/nsContentPolicy.cpp,
line 219]
nsContentPolicy::ShouldLoad
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/content/base/src/nsContentPolicy.cpp,
line 282]
NS_CheckContentLoadPolicy
[../../../dist/include/content/nsContentPolicyUtils.h, line 165]
nsContentUtils::CanLoadImage
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/content/base/src/nsContentUtils.cpp,
line 1845]
nsImageLoadingContent::ImageURIChanged
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/content/base/src/nsImageLoadingContent.cpp,
line 431]
nsImageLoadingContent::ImageURIChanged
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/content/base/src/nsImageLoadingContent.cpp,
line 390]
nsHTMLImageElement::SetParent
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/content/html/content/src/nsHTMLImageElement.cpp,
line 614]
nsGenericElement::AppendChildTo
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/content/base/src/nsGenericElement.cpp,
line 2602]
SinkContext::AddLeaf
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/content/html/document/src/nsHTMLContentSink.cpp,
line 1564]
HTMLContentSink::AddLeaf
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/content/html/document/src/nsHTMLContentSink.cpp,
line 3120]
CNavDTD::AddLeaf
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/parser/htmlparser/src/CNavDTD.cpp,
line 3570]
CNavDTD::HandleStartToken
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/parser/htmlparser/src/CNavDTD.cpp,
line 1643]
CNavDTD::HandleToken
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/parser/htmlparser/src/CNavDTD.cpp,
line 904]
CNavDTD::BuildModel
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/parser/htmlparser/src/CNavDTD.cpp,
line 461]
nsParser::BuildModel
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/parser/htmlparser/src/nsParser.cpp,
line 2047]
Status: RESOLVED → REOPENED
Keywords: topcrash
Resolution: FIXED → ---
Summary: crash in [@ nsMsgContentPolicy::ShouldLoad] → TBTrunk crash in [@ nsMsgContentPolicy::ShouldLoad]
Comment 3•21 years ago
|
||
The trunk crash is different from the one originally reported in this bug.
Here's a null ptr check to address the new trunk crash.
Attachment #174346 -
Flags: superreview?(bienvenu)
| Assignee | ||
Updated•21 years ago
|
Attachment #174346 -
Flags: superreview?(bienvenu) → superreview+
Comment on attachment 174346 [details] [diff] [review]
fix the new crash on the trunk
i'm almost certain this is wrong. returning NS_OK for the false case does not
match the spirit of returning a failure code for a failure case. please justify
this
Attachment #174346 -
Flags: review-
Comment 5•21 years ago
|
||
fixed
Status: REOPENED → RESOLVED
Closed: 21 years ago → 21 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Product: Core → MailNews Core
Updated•15 years ago
|
Crash Signature: [@ nsMsgContentPolicy::ShouldLoad]
You need to log in
before you can comment on or make changes to this bug.
Description
•