Bug #272130 --> Thunderbird Trunk crash in [@ nsMsgContentPolicy::ShouldLoad]

add a null ptr check

sr=bienvenu